[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Laima Urnezaite <laima.urnezaite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.1"
Flask-Session = "^0.3.1"
psycopg2-binary = "^2.8.4"
SQLAlchemy = "^1.3.15"
werkzeug = "0.16.0"
requests = "^2.23.0"
flask_sqlalchemy = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
